pages/styles.css
/* White */

:root {
    --text-color: #000000;
    --background-color: #ffffff;
    --primary-color: #dadada;
    --secondary-color: #c8c8c8;
    --tertiary-color: #7e7e7e;
    --loading-color: #7db6e8;
}

/* Experimenting with other color themes, no theme style switcher functionality implemented, though */

/* Cherry */

/* :root {
    --text-color: #000000;
    --background-color: #f9b9d7;
    --primary-color: #df96b8;
    --secondary-color: #c57d9e;
    --tertiary-color: #976d81;
    --loading-color: #8d4969;
} */

/* Strawberry */

:root {
    --text-color: #000000;
    --background-color: #f9b9ba;
    --primary-color: #df9697;
    --secondary-color: #c57d7e;
    --tertiary-color: #976d6e;
    --loading-color: #8d494a;
}

/* Sea Cyan */

/* :root {
    --text-color: #000000;
    --background-color: #baeef9;
    --primary-color: #95d2de;
    --secondary-color: #7db8c4;
    --tertiary-color: #6c8f96;
    --loading-color: #49828d;
} */

/* Ocean Blue */

/* :root {
    --text-color: #000000;
    --background-color: #bad6f9;
    --primary-color: #96b7df;
    --secondary-color: #7d9dc5;
    --tertiary-color: #6d8097;
    --loading-color: #49688d;
} */

/* Mint */

/* :root {
    --text-color: #000000;
    --background-color: #b9f9c3;
    --primary-color: #96dfa1;
    --secondary-color: #7dc588;
    --tertiary-color: #6d9773;
    --loading-color: #498d53;
} */

/* Lime */

/* :root {
    --text-color: #000000;
    --background-color: #c8f9b9;
    --primary-color: #a7df96;
    --secondary-color: #8ec57d;
    --tertiary-color: #77976d;
    --loading-color: #598d49;
} */

/* Banana */

/* :root {
    --text-color: #000000;
    --background-color: #f9f9b9;
    --primary-color: #dfdf96;
    --secondary-color: #c5c57d;
    --tertiary-color: #97976d;
    --loading-color: #8d8d49;
} */

/* Lemon */

/* :root {
    --text-color: #000000;
    --background-color: #f2f274;
    --primary-color: #d1d14f;
    --secondary-color: #a6a632;
    --tertiary-color: #99991f;
    --loading-color: #73730e;
} */

/* :root {
    --text-color: #000000;
    --background-color: #f2f288;
    --primary-color: #d1d160;
    --secondary-color: #a6a63f;
    --tertiary-color: #99992b;
    --loading-color: #737317;
} */

/* Gray */

/* :root {
    --text-color: #ffffff;
    --background-color: #464646;
    --primary-color: #606060;
    --secondary-color: #727272;
    --tertiary-color: #989898;
    --loading-color: #7db6e8;
} */

/* Dark Theme */

/* Gray */

/* [data-theme="dark"] {
    --text-color: #ffffff;
    --background-color: #464646;
    --primary-color: #606060;
    --secondary-color: #727272;
    --tertiary-color: #989898;
    --loading-color: #7db6e8;
} */

/* Black */

[data-theme="dark"] {
    --text-color: #ffffff;
    --background-color: #000000;
    --primary-color: #262626;
    --secondary-color: #383838;
    --tertiary-color: #828282;
    --loading-color: #7db6e8;
}

body {
    color: var(--text-color);
    caret-color: var(--text-color);
    margin: 0;
    padding: 0;
    
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 12pt;
    
    color: var(--text-color)
}

#progressBar {
    width: 100vw;
    height: 2px;
    background-color: var(--primary-color);
    /* background-color: var(--loading-color); */
}

#titleBar {
    /* Set bar's dimensions */
    width: 100vw;
    height: 35px;
    max-height: 35px;
    
    background-color: var(--background-color);
    
    /* Define child positioning scheme */
    display: flex;
    align-items: center;
    flex-direction: row;
    
    gap: 5px;
    
    /* Make window draggable from the title bar */
    -webkit-user-select: none;
    user-select: none;
    -webkit-app-region: drag;
}

/* Got help from https://stackoverflow.com/questions/42144413/centering-a-specific-element-among-others-with-flexbox */

#leftPart, #centerPart, #rightPart {
    display: flex;
    flex: 1 1 0;
    flex-direction: row;
}

#leftPart {
    justify-content: flex-start;
    gap: 5px;
}

#centerPart {
    flex: 0 0 0;
    justify-content: space-around;
}

#rightPart {
    justify-content: space-between;
}

#leftRightPart {
    justify-content: flex-start;
}

#rightRightPart {
    justify-content: flex-end;
}

#searchBar {
    width: 300px;
    height: 20px;
    
    padding-right: 5px;
    padding-left: 5px;
    
    text-align: center;
    
    margin-top: 9px;
    margin-bottom: 9px;
    
    background-color: var(--primary-color);
    border: 2px solid var(--primary-color);
    border-radius: 5px;
    
    color: var(--text-color);
    
    /* -webkit-user-select: none;
    user-select: none; */

    -webkit-app-region: no-drag;

    /* cursor: text !important; */

    cursor: default !important;
    
    font-size: 11pt;
}

#searchBar:focus {
    /* Should be an option in appearance settings. Makes the searchbar darker when focused (typed on). */
    
    /* background-color: var(--secondary-color);
    border: 2px solid var(--secondary-color); */

    outline: none;
    
    text-align: left;
    
    -webkit-user-select: none;
    user-select: none;
}

#searchBar::placeholder {
    color: var(--tertiary-color)
}

.barButton {
    width: 26px;
    height: 26px;
    
    margin: 0;
    
    margin-top: 9px;
    margin-bottom: 9px;
    
    padding-top: 1px;
    padding-bottom: 1px;
    
    padding-right: 5px;
    padding-left: 5px;
    
    color: var(--text-color);
    background-color: var(--background-color);
    border: 2px solid var(--primary-color);
    /* border: 2px solid var(--background-color); */
    border-radius: 5px;
    
    -webkit-app-region: no-drag;

    transition: background-color 80ms ease;
}

.barButton:hover {
    background-color: var(--primary-color);
    border: 2px solid var(--primary-color);
}

.barButton:active {
    background-color: var(--secondary-color);
    border: 2px solid var(--secondary-color);
}

.barButton:focus {
    outline: none;
}

.barButton:disabled {
    color: var(--secondary-color);
}

.barButton:disabled:hover {
    background-color: var(--primary-color);
}

.barButton:disabled:active {
    background-color: var(--primary-color);
    border: 2px solid var(--primary-color);
}

#backButton {
    margin-left: 75px;
}

/* #forwardButton {} */

/* #refreshButton {} */

/* #newTabButton {} */

#settingsButton {
    margin-right: 5px;
    margin-left: 5px;

    padding-top: 0px;
    padding-bottom: 5px;
    padding-right: 5px;
    padding-left: 3px;
}

::-webkit-scrollbar {
    display: none;
}

#tabBar {
    width: 100vw;
    height: 30px;
    /* min-height: 30px; */

    background-color: var(--background-color);

    display: flex;

    overflow-x: scroll;
}

.tab {
    width: 100%;
    min-width: 100px;
    height: 30px;

    flex-shrink: 1;

    border-right: 2px solid var(--primary-color);

    padding-left: 10px;
    padding-right: 10px;

    font-size: 11.5pt;

    color: var(--tertiary-color);

    overflow-x: hidden;

    display: flex;
    justify-content: center;
    align-items: center;

    user-select: none;
}

.tab:last-of-type {
    border: none;
}

/* .tab:hover {
    background: var(--primary-color);
} */

/* .tab:hover {
    color: var(--loading-color);
} */

.tabTitle {
    width: 100%;
    
    text-align: center;
    
    /* overflow-x: scroll; */
    overflow-x: hidden;
    
    white-space: nowrap;
    text-overflow: ellipsis;

    transition: color 85ms ease-out;
}

.tabTitle:hover {
    color: var(--loading-color);
}

.active > .tabTitle {
    color: var(--text-color);
}

.closeButton {
    margin-left: 3px;
    width: 1em;

    color: var(--tertiary-color);

    transition: color 50ms ease-out;
}

.closeButton:hover {
    color: var(--text-color);
}

#spacingBar {
    width: 100vw;
    height: 2px;
    background-color: var(--primary-color);
}

